--- a/src/index.css
+++ b/src/index.css
@@ -21,17 +21,16 @@ body::-webkit-scrollbar-thumb {
 div::-webkit-scrollbar{ 
      width: 6px;
      border-radius: 20px; 
+     height: 6px;
 }
 div::-webkit-scrollbar-thumb {
   background-color: #280dfb;    /* color of the scroll thumb */
-  border-radius: 20px;
-  height: 8px;      /* roundness of the scroll thumb */
-    /* creates padding around scroll thumb */
+  border-radius: 10px;
+  cursor: pointer;
 }
 p::-webkit-scrollbar{ 
      border-radius: 20px;
      height: 7px;
-    
 }
 p::-webkit-scrollbar-thumb { 
     background-color: #0008fb; 
