--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ div::-webkit-scrollbar{
      height: 6px;
 }
 div::-webkit-scrollbar-thumb {
-  background-color: #280dfb;    /* color of the scroll thumb */
+  background-color: #c4c1e0;    /* color of the scroll thumb */
   border-radius: 10px;
   cursor: pointer;
 }
